# Computo

./: .clang-format  .gitignore  ANTI_PATTERNS.md  BOOK_PLAN.md  BUILDER_README.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  CORE_REQUIREMENTS.md  ComputoConfig.cmake.in  DOCUMENTATION_SYSTEM.md  IMPROVEMENT_IDEAS.md  LESSONS.md  LESSONS_LAZY_DEBUG_STACK.md  LESSONS_TCO_EXPLICIT_DEBUG_STACK.md  MISSING_OPERATORS.md  Makefile  PROGRESS.md  README.md  README.toml  REQUIREMENTS.md  TABTOOLS_INSPIRED_IDEAS.md  TECHNICAL_DETAILS.md  build.sh  generate_examples.py  generate_readme.py
.github/workflows/: docs.yml
AI/: ANTI_PATTERNS.md  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  ARRAY_HANDLING.md  BRIEF.md  BUILDING.md  BUILD_OPTIMIZATION.md  CLEAN_ARCHITECTURE.md  CORE_REQUIREMENTS.md  DEBUG_AND_REPL.md  DEVELOPMENT_WORKFLOW.md  ENGINEERING_FEATURES.md  ERROR_STANDARDS.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_SCENARIOS.md  LESSONS.md  LINTING_PROCESS.md  MEMORY_TESTING.md  PERFORMANCE_BENCHMARKS.md  PLAN.md  PROJECT_OVERVIEW.md  SORT_OPERATOR_DOCUMENTATION.md  TCO_IMPLEMENTATION_GUIDE.md  TESTING_STRATEGY.md  THREAD_SAFETY_TESTING.md  UNIQUE_OPERATOR_DOCUMENTATION.md  USER_EXPERIENCE.md
DOCUMENTATION/: 01_CORE_REQUIREMENTS.md  02_ARCHITECTURE.md  03_IMPLEMENTATION_PLAN.md  04_DEVELOPMENT_STANDARDS.md  sort-operator-documentation.md  unique-operator-documentation.md
DOCUMENTATION/operators/: arithmetic.md  comparison.md  data_access.md
book/: 00_index.md
cli/: main.cpp
cmake/: Dependencies.cmake  Documentation.cmake  Executable.cmake  Installation.cmake  Library.cmake  Testing.cmake  cmake_uninstall.cmake.in
docs/: LANGUAGE_REFERENCE.md  SYNTAX_VERIFICATION_PROCESS.md  extract-documented-ops.py  generate-indexes.py  generate-reference.py  operators.yaml  test-examples.py  validate-all.sh  validate-coverage.py
docs/alpha/: index.md
docs/task/: index.md
done/: LESSONS.md  LESSONS_CPS.md  TCO_PLAN.md
include/: computo.hpp  computo_version.hpp.in
include/computo/: builder.hpp  computo.hpp  debugger.hpp  memory_pool.hpp  operators.hpp  repl.hpp
scripts/: README.md  generate_examples.py  generate_readme.py  setup_venv.sh
src/: benchmark.cpp  cli.cpp  cli_args.cpp  cli_args.hpp  computo.cpp  debug_context.cpp  debugger_manager.cpp  debugger_repl.cpp  evaluation_utils.cpp  global_debug_stats.cpp  global_pool_stats.cpp  json_colorizer.cpp  json_colorizer.hpp  main.cpp  read_json.hpp  repl.cpp  repl.hpp  sugar_parser.cpp  sugar_parser.hpp  sugar_writer.cpp  sugar_writer.hpp
src/operators/: arithmetic.cpp  array.cpp  array_ops.cpp  comparison.cpp  control_flow.cpp  data.cpp  data_access.cpp  declarations.hpp  functional.cpp  functional_ops.cpp  list.cpp  logical.cpp  object_ops.cpp  shared.cpp  shared.hpp  sort_utils.cpp  sort_utils.hpp  string.cpp  string_array.cpp  string_utility_ops.cpp  stubs.cpp  utilities.cpp  utility.cpp
tests/: builder_examples.cpp  cross_platform_test_utils.hpp  test_advanced_arrays.cpp  test_arithmetic.cpp  test_array.cpp  test_array_key.cpp  test_array_ops.cpp  test_array_prefix.cpp  test_array_utilities.cpp  test_basic_operators.cpp  test_builder.cpp  test_builder_fixes.cpp  test_cli.cpp  test_cli_array_key.cpp  test_cli_integration.cpp  test_comparison.cpp  test_control_flow.cpp  test_data.cpp  test_data_access.cpp  test_debug.cpp  test_debug_integration.cpp  test_debugging.cpp  test_error_handling_edge_cases.cpp  test_functional.cpp  test_functional_ops.cpp  test_get.cpp  test_infrastructure.cpp  test_integration.cpp  test_iteration_lambdas.cpp  test_json_colorizer.cpp  test_json_patch.cpp  test_json_pointer.cpp  test_lambda.cpp  test_lambda_analysis.cpp  test_let.cpp  test_logic_construction.cpp  test_logical.cpp  test_logical_operators.cpp  test_memory_pool.cpp  test_memory_safety.cpp  (+21 more)
todo/: IMPROVEMENT_IDEAS.md  JSONATA_IDEAS.md  REMOVE_GET.md  TODO.md
